# kfold-x-validation

./: Dockerfile  K-Fold Cross Validation Experiments.ipynb  KFoldCrossValidation.py  KNN.py  README.md  helpers.py  k_fold_runner.py  pyproject.toml
KFoldCrossValidation/: KFoldCrossValidation.py
KNN/: KNN.py  helpers.py
datasets/: toy.csv
tests/: test_kfold_x_validation.py
