[tool.poetry]
name = "kfold-x-validation"
version = "0.1.0"
description = """This implements a generic KNN algorithm and repeated k-fold cross
validation to get evaluation metrics on it"""
authors = ["Matheus Westhelle <matheus.westhelle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.1"
jupyter = "^1.0.0"
ipykernel = "^5.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
